# archipel

./: .git_commit_msg.tmp  .gitignore  CHANGELOG.md  PROJET_ARCHIPEL_PLAN.md  README.md  cifar10_modal.py  cifar10_results.json  compare_kuramoto_results.json  extract_pdf.py  kmatrix_validation.json  modal_run.py  modal_validate.py  test_anomaly.py  test_archipel.py  test_assert_driven.py  test_baseline_comparison.py  test_custom_mnist.py  test_integration_phase3.py  test_isolate.py  test_lifecycle.py  test_mnist_long.py  test_mnist_quick.py  test_output.csv  test_save_load.py  test_specialization.py  test_topk_curriculum.py  test_train_script.py  test_validation_baseline.py  test_validation_niveau_1_4_1_5.py  test_version.py  test_version2.py  training_log.csv  validate_kuramoto_compare.py  validate_niveau1415.py  validate_niveau1415_quick.py  validation_results.json
archipel/: README.md  pyproject.toml  test_csv_logger.py  train.py
archipel/configs/: default.yaml  quick_test.yaml  test_quick.yaml  validation.yaml
archipel/src/archipel/: __init__.py
archipel/src/archipel/baselines/: __init__.py  mlp.py
archipel/src/archipel/benchmarks/: __init__.py
archipel/src/archipel/current/: __init__.py  courant.py  kuramoto.py  router.py  test_kuramoto.py  topk_curriculum.py
archipel/src/archipel/islands/: __init__.py  base_island.py  lifecycle.py  specialization.py
archipel/src/archipel/models/: mnist.py
archipel/src/archipel/ocean/: __init__.py  ocean.py
archipel/src/archipel/training/: __init__.py  csv_logger.py  loop.py  loop_lifecycle.py
(+12 files in other folders)
